# rubiks-solver

./: .gitignore  README.md  pyproject.toml
scripts/: profile_solver.py
scripts/profile_times/: profile.out  profile_original.out
src/rubiks/: __main__.py  cli.py
src/rubiks/cube/: moves.py  pack.py  scramble.py  state.py
src/rubiks/solver/: base.py  heuristic.py  ida_star.py
src/rubiks/viz/: ansi_net.py
tests/: tes_viz.py  test_cube_invariants.py  test_packing.py  test_scramble.py  test_solver.py
